--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -2,8 +2,6 @@
 
 .card-picture {
   display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 .card {
@@ -19,6 +17,10 @@
     .card--hover-overlay {
       transform: translateY(0);
     }
+
+    // .card-thumb:hover.card-thumb::before {
+    //   transform: translateY(0);
+    // }
   }
   &::before {
     position: absolute;
@@ -28,7 +30,7 @@
     height: 100%;
     left: 0;
     bottom: 0;
-    transform: translateY(calc(100%));
+    transform: translateY (calc#{100%});
     transition: transform $animation-var;
     background-color: rgba(33, 150, 243, 0.9);
   }
@@ -41,7 +43,7 @@
   height: 294px;
   left: 0;
   bottom: 0;
-  transform: translateY(calc(100%));
+  transform: translateY (calc#{100%});
   transition: transform $animation-var;
   text-align: left;
   padding: 63px 24px;
@@ -69,7 +71,6 @@
 }
 
 .card__border {
-  display: block;
   padding: 20px 24px;
   text-align: left;
   border-left: 1px solid #eeeeee;
