--- a/css/main.css
+++ b/css/main.css
@@ -651,8 +651,6 @@ ul {
 
 .card-picture {
   display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 .card {
@@ -679,8 +677,8 @@ ul {
   height: 100%;
   left: 0;
   bottom: 0;
-  -webkit-transform: translateY(calc(100%));
-          transform: translateY(calc(100%));
+  -webkit-transform: translateY calc100%;
+          transform: translateY calc100%;
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -695,8 +693,8 @@ ul {
   height: 294px;
   left: 0;
   bottom: 0;
-  -webkit-transform: translateY(calc(100%));
-          transform: translateY(calc(100%));
+  -webkit-transform: translateY calc100%;
+          transform: translateY calc100%;
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -727,7 +725,6 @@ ul {
 }
 
 .card__border {
-  display: block;
   padding: 20px 24px;
   text-align: left;
   border-left: 1px solid #eeeeee;
