--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -6,7 +6,7 @@
 
 .icon__wrapper {
   @extend %flex-centered;
-  width: 270px;
+  min-width: 450px;
   height: 120px;
   margin-bottom: 30px;
   background-color: $team-background-color;
@@ -18,20 +18,22 @@
   @extend %section;
 
   &__list {
-    @extend %flex-centered;
+    // @extend %flex-centered;
     @extend %list-nomarked;
-    margin-bottom: 94px;
+    // margin-bottom: 94px;
   }
 
   &__item {
-    max-width: 270px;
-    margin-right: 30px;
+    margin-bottom: 30px;
+    // max-width: 270px;
+    // margin-right: 30px;
     &:last-child {
-      margin-right: 0;
+      margin-bottom: 0;
     }
   }
 
   &__title {
+    text-align: center;
     margin-bottom: 10px;
     font-style: normal;
     font-weight: bold;
@@ -43,7 +45,6 @@
   }
 
   &__description {
-    max-width: 270px;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.8;
