--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -7,8 +7,9 @@
 
 .footer-conteiner {
   @extend %conteiner;
-  display: flex;
-  align-items: top;
+  text-align: center;
+  // display: flex;
+  // align-items: top;
 }
 
 .address {
@@ -22,10 +23,10 @@
 
   &__list {
     @extend %list-nomarked;
-    padding-right: 16px;
+    // padding-right: 16px;
   }
   &__item {
-    margin-bottom: 7px;
+    margin-bottom: 8px;
     color: $primary-white-color;
 
     &:last-child {
@@ -41,10 +42,14 @@
   }
 }
 
+.address-wrapper {
+  margin-bottom: 60px;
+}
+
 .footer-form {
-  margin-left: 93px;
-  align-self: flex-start;
-  padding-top: 12px;
+  // margin-left: 93px;
+  // align-self: flex-start;
+  // padding-top: 12px;
 
   &__title {
     margin-bottom: 20px;
@@ -57,10 +62,10 @@
   }
 
   &__input {
-    width: 358px;
+    width: 450px;
     height: 50px;
     padding-left: 16px;
-    margin: 0;
+    margin: 0 0 20px 0;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
@@ -71,6 +76,6 @@
   }
 
   &__wrapper {
-    @extend %flex-centered;
+    // @extend %flex-centered;
   }
 }
