--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,10 +1,10 @@
 // Герой
 
 .hero {
+  @extend %flex-centered;
   @extend %section;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 100%;
+  padding: 118px 60px;
   text-align: center;
   border-right-color: #c4c4c4;
   background-image: linear-gradient(
@@ -12,24 +12,19 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/hero-bg-image.jpg);
+    url(../images/m.hero-bg-image.jpg);
   background-repeat: no-repeat;
-  background-position: center;
   background-size: cover;
 }
 
 .hero__conteiner {
-  display: block;
-  @extend %conteiner;
-  padding: 200px 0;
 }
 
 .hero__title {
-  width: 696px;
-  margin: 0 auto 30px;
+  margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.37;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
