--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -47,6 +47,7 @@
 }
 
 .social-links {
+  margin-bottom: 60px;
   &__title {
     margin-bottom: 20px;
     //   margin-left: 70px;
@@ -60,8 +61,8 @@
   }
 
   &--footered {
-    margin-left: 70px;
+    // margin-left: 70px;
     align-self: flex-start;
-    padding-top: 12px;
+    // padding-top: 12px;
   }
 }
