--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -16,7 +16,7 @@
   }
 
   &__list {
-    @extend %flex-centered;
+    // @extend %flex-centered;
     @extend %list-nomarked;
   }
 }
@@ -26,10 +26,12 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-right: 30px;
+  // margin-right: 30px;
+  margin-bottom: 30px;
 
   &:last-child {
-    margin-right: 0;
+    // margin-right: 0;
+    margin-bottom: 0;
   }
 
   &__name {
