--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
   }
 }
 
-.header_conteiner, .nav, .nav__list, .contacts__list, .hero, .icon__wrapper, .production__list, .social-list, .partners .partners__list, .portfolio__button-list, .agreement-wrapper {
+.header_conteiner, .nav, .nav__list, .hero, .icon__wrapper, .production__list, .social-list, .m-socials__list, .partners .partners__list, .portfolio__button-list, .agreement-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -29,11 +29,11 @@
           justify-content: center;
 }
 
-.logo__link, .nav__link, .contacts__link, .portfolio__card-link, .address__link {
+.logo__link, .nav__link, .contacts__link, .m-socials__link, .portfolio__card-link, .address__link, .m-nav__link, .m-contacts__link {
   text-decoration: none;
 }
 
-.nav__list, .contacts__list, .features__list, .production__list, .team__list, .social-list, .partners .partners__list, .portfolio__button-list, .portfolio__card-list, .address__list {
+.nav__list, .contacts__list, .features__list, .production__list, .team__list, .social-list, .m-socials__list, .partners .partners__list, .portfolio__button-list, .portfolio__card-list, .address__list, .m-nav__list, .m-contacts__list {
   list-style: none;
 }
 
@@ -54,7 +54,7 @@
   color: #ffffff;
 }
 
-.nav__link:hover, .contacts__link:hover, .address__link:hover, .nav__link:focus, .contacts__link:focus, .address__link:focus {
+.nav__link:hover, .contacts__link:hover, .address__link:hover, .m-nav__link:hover, .nav__link:focus, .contacts__link:focus, .address__link:focus, .m-nav__link:focus {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #2196f3;
@@ -185,12 +185,6 @@ ul {
   bottom: -3px;
   border-radius: 2px;
   background-color: #2196f3;
-}
-
-.m-nav__icon:hover, .m-nav__icon:focus {
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: #2196f3;
 }
 
 .contacts {
@@ -462,6 +456,40 @@ ul {
       align-self: flex-start;
 }
 
+.m-socials__list {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.m-socials__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.m-socials__item {
+  position: relative;
+}
+
+.m-socials__item::after {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 22px;
+  right: -12px;
+  top: -3px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.m-socials__item:last-of-type:after {
+  display: none;
+}
+
 .partners .partners__title {
   margin-bottom: 50px;
   font-style: normal;
@@ -556,7 +584,7 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 6px 22px;
   text-align: center;
-  font: inherit;
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -580,11 +608,12 @@ ul {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .portfolio__button-item {
   margin-right: 8px;
+  margin-bottom: 15px;
 }
 
 .portfolio__button-item:last-child {
@@ -645,16 +674,73 @@ ul {
   color: #ffffff;
 }
 
+.m-button {
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  color: #212121;
+  background-color: #ffffff;
+}
+
+.m-button__icon:hover, .m-button__icon:focus {
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #2196f3;
+}
+
+.m-button-close {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  right: 15px;
+  top: 10px;
+  padding: auto;
+  margin: 0;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  border: none;
+  background-color: #ffffff;
+}
+
+.m-button-close:hover, .m-button-close:focus {
+  color: #2196f3;
+  fill: currentColor;
+}
+
+.m-button-close__logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.portfolio__button-list {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+}
+
 .portfolio__card-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: stretch;
+      -ms-flex-pack: stretch;
+          justify-content: stretch;
 }
 
 .portfolio__card-item {
-  margin-left: 30px;
   margin-bottom: 30px;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -667,11 +753,7 @@ ul {
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio__card-item:nth-child(3n + 1) {
-  margin-left: 0;
-}
-
-.portfolio__card-item:nth-last-child(-n + 3) {
+.portfolio__card-item:last-child {
   margin-bottom: 0;
 }
 
@@ -683,6 +765,9 @@ ul {
   position: relative;
   display: block;
   overflow: hidden;
+  -webkit-box-pack: stretch;
+      -ms-flex-pack: stretch;
+          justify-content: stretch;
 }
 
 .card:hover::before {
@@ -852,8 +937,8 @@ ul {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -920,7 +1005,7 @@ ul {
 
 .form__input {
   display: block;
-  width: 448px;
+  width: 370px;
   height: 40px;
   padding: 10px 5px 10px 42px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -997,7 +1082,6 @@ ul {
   display: inline-block;
   width: 16px;
   height: 15px;
-  margin-left: 14px;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border: 2px solid #000000;
@@ -1009,22 +1093,138 @@ ul {
   display: inline-block;
   margin-left: 7px;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
 }
 
 .agreement__link {
   display: inline-block;
-  margin-left: 5px;
   cursor: pointer;
   font-family: Roboto, sans-serif;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
   color: #2196f3;
+}
+
+.m-backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  background-color: #ffffff;
+}
+
+.m-backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.m-backdrop .is-hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+}
+
+.m-modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  width: 100%;
+  height: 100%;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+
+.m-nav {
+  width: 480px;
+  height: 100%;
+  padding: 48px 83px 48px 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.m-nav__item {
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.m-nav__item:last-child {
+  margin-bottom: 0;
+}
+
+.m-nav__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  letter-spacing: 0.02em;
+  cursor: pointer;
+  border: none;
+  color: #212121;
+  background-color: #ffffff;
+}
+
+.m-nav__link--current {
+  color: #2196f3;
+}
+
+.m-contacts {
+  margin-bottom: 64px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  cursor: pointer;
+}
+
+.m-contacts__link {
+  display: inline-block;
+  cursor: pointer;
+  color: #757575;
+}
+
+.m-contacts__mail {
+  display: block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+}
+
+.m-contacts__tel {
+  display: block;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.m-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
 }
 /*# sourceMappingURL=main.css.map */
