--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -33,7 +33,7 @@
   transition: background-color $animation-var, color $animation-var;
   padding: 6px 22px;
   text-align: center;
-  font: inherit;
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -56,7 +56,8 @@
 
 .portfolio__button-list {
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+  // margin-bottom: 50px;
 }
 
 .portfolio__button-item {
@@ -64,9 +65,10 @@
   &:last-child {
     margin-right: 0;
   }
+  margin-bottom: 15px;
 }
 
-// Стили кнопки Close и SUbmit модального окна
+// Стили кнопки Close модального окна
 
 .button-close {
   position: absolute;
@@ -96,6 +98,8 @@
   }
 }
 
+// Стили кнопки Submit модального окна
+
 .btn-submit {
   display: block;
   width: 200px;
@@ -117,5 +121,55 @@
     line-height: 1.87;
     letter-spacing: 0.06em;
     color: $primary-white-color;
+  }
+}
+
+// Стили кнопки открытия модального окна навигации для Mobile
+
+.m-button {
+  width: 40px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  color: $title-text-color;
+  background-color: $primary-white-color;
+
+  &__icon {
+    &:hover,
+    &:focus {
+      transition: fill $animation-var;
+      fill: $accent-color;
+    }
+  }
+}
+
+// Стили кнопки закрытия модального окна навигации для Mobile
+
+.m-button-close {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  right: 15px;
+  top: 10px;
+  padding: auto;
+  margin: 0;
+  transition: color $animation-var;
+  cursor: pointer;
+  border: none;
+  background-color: $primary-white-color;
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+    fill: currentColor;
+  }
+
+  &__logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
