--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,8 +29,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   transition: transform $animation-var;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -91,7 +91,8 @@
 
   &__input {
     display: block;
-    width: 448px;
+    width: 370px;
+    // width: 448px;
     height: 40px;
     padding: 10px 5px 10px 42px;
     transition: border-color $animation-var;
@@ -148,7 +149,7 @@
     display: inline-block;
     width: 16px;
     height: 15px;
-    margin-left: 14px;
+    // margin-left: 14px;
     transition: background-color $animation-var, border $animation-var;
     border: 2px solid #000000;
     border-radius: 2px;
@@ -160,18 +161,22 @@
   display: inline-block;
   margin-left: 7px;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
+  // font-size: 14px;
+  // line-height: 1.71;
   letter-spacing: 0.03em;
 
   &__link {
     display: inline-block;
-    margin-left: 5px;
+    // margin-left: 5px;
     cursor: pointer;
     font-family: Roboto, sans-serif;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.17;
+    // font-size: 14px;
+    // line-height: 1.71;
     letter-spacing: 0.03em;
     text-decoration-line: underline;
     color: $accent-color;
