--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -71,6 +71,7 @@
 
 .card__border {
   padding: 20px 24px;
+  width: 100%;
   text-align: left;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
